# RedDash

./: .gitignore  LICENSE  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: release-windows.yml
app/: globals.css  layout.tsx  liquid-glass.css  page.tsx
components/: ApiStatus.tsx  AppContext.tsx  BulkLogModal.tsx  CalendarView.tsx  ContextMenu.tsx  DetailModal.tsx  FavoritesView.tsx  IssueSearchInput.tsx  MonthPicker.tsx  PieChart.tsx  SearchableSelect.tsx  SecurityView.tsx  Select.tsx  SettingsModal.tsx  Shell.tsx  StatsView.tsx  TeamView.tsx  TitleBar.tsx  Toast.tsx  UserPicker.tsx
docs/: research-liquid-glass.md
lib/: api-error.ts  biometric.ts  favorites.ts  open-url.ts  redmine.ts  storage.ts  theme.tsx  types.ts  updater.ts  use-api.ts  vault.ts
lib/i18n/: index.tsx  types.ts
lib/i18n/locales/: en.ts  vi.ts
scratch/: find_vietnamese.py
scripts/: dev-signed.sh  make-release.mjs  release-local.mjs  sync-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: biometric.rs  lib.rs
