[package]
name = "redmine-dashboard"
version = "0.1.0"
description = "RedDash — Redmine time tracking dashboard"
authors = ["Tieu Anh Quoc <tieuanhquoc@gmail.com>"]
license = "MIT"
homepage = "https://tieuanhquoc.info/"
repository = "https://github.com/tieuanhquoc/RedDash"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tauri-plugin-stronghold = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
open = "5"

# Optimize all dependencies even in dev mode — crypto (Argon2, ChaCha20)
# is ~50x slower without optimization. Own code stays opt-level=0 so
# iteration speed is preserved.
[profile.dev.package."*"]
opt-level = 3
